syntax = "proto3";
package stride.icqoracle;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Stride-Labs/stride/v24/x/icqoracle/types";

// TokenPrice stores latest price data for a token
message TokenPrice {
  // Token denom (e.g. "uatom", "uosmo")
  string denom = 1;

  // Price in USDC or STRD
  string price = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // Last update timestamp
  google.protobuf.Timestamp updated_at = 3
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}

// OracleParams stores global oracle parameters
message Params {
  // Time between price updates
  uint64 update_interval_sec = 1 [
    (gogoproto.moretags) = "yaml:\"update_interval_sec\"",
    (gogoproto.jsontag) = "update_interval_sec"
  ];

  // Max time before price is stale
  uint64 timeout_sec = 2 [
    (gogoproto.moretags) = "yaml:\"timeout_sec\"",
    (gogoproto.jsontag) = "timeout_sec"
  ];
}
