syntax = "proto3";
package stride.icqoracle;

import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/Stride-Labs/stride/v24/x/icqoracle/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // AddTokenPrice adds a new token to track prices for
  rpc AddTokenPrice(MsgAddTokenPrice) returns (MsgAddTokenPriceResponse);

  // RemoveTokenPrice removes a token from price tracking
  rpc RemoveTokenPrice(MsgRemoveTokenPrice)
      returns (MsgRemoveTokenPriceResponse);
}

// MsgAddTokenPrice defines the message for adding a new token to track prices
message MsgAddTokenPrice {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "stride/x/icqoracle/MsgAddTokenPrice";

  string sender = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // Token denom (e.g. "uatom", "uosmo")
  string base_denom = 2;
  // Quote denom (e.g. ustrd, uusdc)
  string quote_denom = 3;
}

message MsgAddTokenPriceResponse {}

// MsgRemoveTokenPrice defines the message for removing a token from price
// tracking
message MsgRemoveTokenPrice {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "stride/x/icqoracle/MsgRemoveTokenPrice";

  string sender = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // Token denom (e.g. "uatom", "uosmo")
  string base_denom = 2;
  // Quote denom (e.g. ustrd, uusdc)
  string quote_denom = 3;
}

message MsgRemoveTokenPriceResponse {}